Fixes bug with todos embedding

--- a/results/plcop/all_params.ini
+++ b/results/plcop/all_params.ini
@@ -18,7 +18,7 @@ paramodulation	0
 pathlim	1000
 playout	200000
 playout_time	300
-problem_file	./theorems/m2n140/l1_zfmisc_1.p
+problem_file	theorems/m2n140/l1_zfmisc_1.p
 remove_duplicates	1
 return_to_root	0
 save_all_policy	0
