--- a/results/plcop/all_params.ini
+++ b/results/plcop/all_params.ini
@@ -1,30 +1,36 @@
+base_port	2042
 bigstep_frequency	2000
 collapse_vars	0
-cp	1
+cp	2
 eager_reduction	1
-guidance_dir	None
-guided	0
+encoder_server	./encoder/server.py
+guidance_dir	/home/viktor/Documents/plcop/results/plcop
+guided	2
 inference_limit	200000
-ini_file	['ini/plcop0.ini']
+ini_file	['ini/plcop1.ini']
+lang_file	./encoder/saved_models/newly_trained/len-300-lang.json
 lemma_features	0
+log_file_base	./encoder/server_log/run0/p-
 lr	0.3
 min_visit_count	1
+model_file	./encoder/saved_models/newly_trained/u-128-pruning.tflite
 model_type	xgboost
-n_dim	10000
+n_dim	256
 num_rounds	400
 outdir	results/plcop
 output_format	svmlight
 paramodulation	0
 pathlim	1000
 playout	200000
-playout_time	300
-problem_file	theorems/m2np/t23_yellow_0.p
+playout_time	20
+port_offset	0
+problem_file	theorems/pelletier21.p
 remove_duplicates	1
 return_to_root	0
 save_all_policy	0
 save_all_proofs	0
 save_all_value	1
 sim_depth	0
-target_model	all
+target_model	policy
 temperature	2
 test_ratio	0.2
