--- a/ini/plcop1.ini
+++ b/ini/plcop1.ini
@@ -1,6 +1,7 @@
 bigstep_frequency   2000
 cp	2
-eager_reduction 1
+eager_reduction 0
+encoder_port    2042
 guidance_dir    /home/viktor/Documents/plcop/results/plcop
 guided	2
 inference_limit 200000
