--- a/results/plcop/all_params.ini
+++ b/results/plcop/all_params.ini
@@ -1,13 +1,14 @@
 base_port	2042
 bigstep_frequency	2000
 collapse_vars	0
-cp	2
-eager_reduction	1
+cp	1
+eager_reduction	0
+encoder_port	2042
 encoder_server	./encoder/server.py
-guidance_dir	/home/viktor/Documents/plcop/results/plcop
-guided	2
+guidance_dir	None
+guided	0
 inference_limit	200000
-ini_file	['ini/plcop1.ini']
+ini_file	['./ini/plcop0.ini']
 lang_file	./encoder/saved_models/newly_trained/len-300-lang.json
 lemma_features	0
 log_file_base	./encoder/server_log/run0/p-
@@ -22,15 +23,15 @@ output_format	svmlight
 paramodulation	0
 pathlim	1000
 playout	200000
-playout_time	300
+playout_time	30
 port_offset	0
-problem_file	theorems/pelletier21.p
+problem_file	./theorems/m2n140/t3_connsp_2.p
 remove_duplicates	1
 return_to_root	0
 save_all_policy	0
 save_all_proofs	0
 save_all_value	1
 sim_depth	0
-target_model	policy
+target_model	all
 temperature	2
 test_ratio	0.2
