--- a/ini/plcop0.ini
+++ b/ini/plcop0.ini
@@ -1,6 +1,7 @@
 bigstep_frequency   2000
 cp	1
-eager_reduction 1
+eager_reduction 0
+encoder_port    2042
 guidance_dir    None
 guided	0
 inference_limit 200000
